# zephyr-pr-manager

./: .gitignore  README.md  pyproject.toml  setup.cfg  zpr.py
src/zpr/: __main__.py  commit.py  pr.py
