[metadata]
name = zpr
version = attr: zpr.__version__
description = Zephyr PR Manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yperess/zephyr-pr-manager
python_requires = ~=3.8

[options]
package = find:
package_dir =
    =src
install_requires =
    argparse
    GitPython

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    zpr = zpr.__main__:main

[isort]
profile = black
src_paths = src,tests
filter_files = True
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = True
line_length = 120
